<resources>
    <string name="app_name">LibraryApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="catalog">Catálogo</string>
    <string name="reservations">Reservas</string>
    <string name="profile">Perfil</string>
    <string name="girl_with_books">girl with books</string>
    <string name="login_welcome_message">Bienvenido a la biblioteca de tu barrio</string>
    <string name="welcome_message_want_to_manage_your_library">¿Quieres gestionar tu biblioteca?</string>
    <string name="btn_create_admin_account">Crear una cuenta de administrador</string>
    <string name="log_in_to_your_account">Ingresa a tu cuenta</string>
    <string name="input_your_data">Ingresa tus datos</string>
    <string name="email">Email</string>
    <string name="girl_reading_content_description">Girl reading</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="get_invite_message">¿Aún no tienes cuenta?\n Pídele al administrador de tu organización que te invite!</string>
    <string name="bookstore">Tienda de libros</string>
    <string name="signup">Registrarse y crear organización</string>
    <string name="org_name">Nombre de la organización</string>
    <string name="name">Nombre</string>
    <string name="organization_icon">organization icon</string>
    <string name="signup_message">Recuerda que al registrarte te convertirás en el administrador de ésta organización</string>
    <string name="title_catalog">CATÁLOGO</string>
    <string name="title_reservations">MIS RESERVAS</string>
    <string name="library">Biblioteca</string>
    <string name="administrator">Administrador</string>
    <string name="invite_student">Invitar alumno</string>
    <string name="apikey_management">Gestión de API key</string>
    <string name="return_book">Devolver libro</string>
    <string name="book_management">Gestión de libros</string>
    <string name="Hello">Hola</string>
    <string name="current_api_key">API key actual</string>
    <string name="refresh_api_key">Renovar API key</string>
    <string name="invite_user">Invitar usuario</string>
    <string name="email_invite_user">Email del usuario a invitar</string>
    <string name="send_invitation">Enviar invitación</string>
    <string name="add_book">Añadir libro</string>
    <string name="book_details">Detalles del libro nuevo</string>
    <string name="title">Título</string>
    <string name="authors">Autores</string>
    <string name="year">Año</string>
    <string name="quantity">Cantidad de ejemplares</string>
    <string name="edit_book">Editar libro</string>
    <string name="book_details_edit">Detalles del libro</string>
</resources>
